[project]
name = "deepdr-plus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "numpy==1.23.*",
    "seaborn>=0.11.2",
    "scikit-learn>=1.1.1",
    "pandas==1.5.*",
    "albumentations==1.3.*",
    "pymongo==4.3.*",
    "tqdm==4.65.*",
    "pingouin==0.5.*",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "opencv-python>=4.11.0.86",
]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://mirrors.ustc.edu.cn/pypi/web/simple"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/web/simple"
default = true